# django

./: README.md  db.sqlite3  pyproject.toml
docs/: README.md  apis.md  forms.md  json_api_example.md  models.md  overview.md  settings.md  templates.md  url_validation.md  urls.md  views.md  workflow.md
todo/: forms.py  models.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: base.html  todo_confirm_delete.html  todo_form.html  todo_list.html
todoproject/: settings.py
