[project]
name = "todo-django"
version = "0.1.0"
description = "A simple Django todo list application"
authors = [
    {name = "Khush Shah ",email = "114491725+khush2808@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
